# fishing-forecast

./: .env.example  .env.postgres.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  UI_IMPROVEMENTS_STATUS.md  docker-compose.postgres.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
Data collected/: Безкоштовні API для Прогноз клювання.md  Безкоштовні сервери для Rust Backend.md  ЗАФІКСОВАНО - Повна специфікація проекту.md  КРИТИЧНІ РЕЧІ.md  Опис проекта Fishing Forecast.md  Системний промпт для AI-агента розробника.md  Чи буде працювати в Європі..md  🎣UI-UX Дизайн Прогноз клювання.md  🎯 Варіант 2 Rust Backend + Flutter.md  🎯 Варіант 3 Rust + Tauri (Desktop-first).md  🎯 Варіант 4 Rust Backend + Capacitor.md  🎯 Варіант 5 Dioxus (Rust для UI) ⭐ Якщо ТІЛЬКИ Rust.md  🥇 Варіант 1 - Турбо старт (Найшвидший MVP).md
crates/backend/: Cargo.toml  Shuttle.toml  init_and_seed.sql  seed_data.sql  start-dev.bat
crates/backend/migrations/: 001_init.sql  001_initial_schema.sql  002_i18n_support.sql  003_regional_species.sql  004_regulations.sql  005_seed_data.sql
crates/backend/src/: main.rs
crates/backend/src/db/: mod.rs  queries.rs
crates/backend/src/models/: mod.rs
crates/backend/src/routes/: auth.rs  catches.rs  fish.rs  forecast.rs  health.rs  mod.rs  region.rs  regulations.rs  water_bodies.rs
crates/backend/src/services/: auth.rs  geocoding.rs  http_client.rs  mod.rs  prediction.rs  weather.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html  start-dev.bat
crates/frontend/assets/: manifest.json  sw.js
crates/frontend/src/: app.rs  main.rs
crates/frontend/src/components/: catch_form.rs  forecast_panel.rs  map.rs  mod.rs
crates/frontend/src/services/: api_client.rs  geolocation.rs  map_service.rs  mod.rs
crates/frontend/src/state/: app_state.rs  mod.rs
crates/frontend/src/utils/: formatters.rs  mod.rs
crates/ml-engine/: Cargo.toml
crates/ml-engine/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/constants/: countries.rs  languages.rs  mod.rs
crates/shared/src/types/: catch_record.rs  forecast.rs  language.rs  mod.rs  region.rs  units.rs  water_body.rs  weather.rs
crates/shared/src/utils/: geo.rs  mod.rs  moon.rs  sun.rs
docs/: API.md  DATABASE_SCHEMA.md
plans/: deployment-plan.md
