[package]
name = "fishing-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Frontend stack
dioxus = { version = "0.5", features = ["web"] }
dioxus-web = "0.5"
dioxus-router = "0.5"
gloo-storage = "0.3"
gloo-net = "0.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlElement", "HtmlDivElement", "MouseEvent", "Event"] }
urlencoding = "2.1"
log = "0.4"
wasm-logger = "0.2"

fishing-shared = { path = "../shared" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
