[package]
name = "fishing-ml-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio = { version = "1.35", features = ["sync"] }
tracing = "0.1"

fishing-shared = { path = "../shared" }
