[package]
name = "fishing-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
geo.workspace = true
geojson.workspace = true
thiserror.workspace = true
anyhow.workspace = true
